<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">ComOtg</string>
	<string name="query_lable">Query</string>
	<string name="single_lable">SingleSend</string>
	<string name="send_lable">Send</string>
	<string name="receive_lable">Receive</string>
	<string name="stop_lable">Stop</string>
	<string name="start_lable">start</string>
	<string name="eroll_lable">eroll</string>

</resources>
