<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"   
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"   
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls">

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TextView
			android:id="@+id/showInfoTxt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:scrollbars="vertical" />
	
		<Button
			android:id="@+id/queryBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/showInfoTxt"
			android:text="@string/query_lable" />
		<Button
			android:id="@+id/start"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/queryBtn"
			android:text="@string/start_lable" />
		<Button
			android:id="@+id/eroll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/start"
			android:text="@string/eroll_lable" />
		<Button
            android:id="@+id/singleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/eroll"
            android:text="@string/single_lable" />

		<Button
			android:id="@+id/sendBtn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/singleBtn"
			android:text="@string/send_lable" />
	
		<Button
	        android:id="@+id/receiveBtn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/sendBtn"
	        android:text="@string/receive_lable" />
	
		<Button
	        android:id="@+id/stopBtn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/receiveBtn"
	        android:text="@string/stop_lable" />
	
	</RelativeLayout>
</ScrollView>